deployment/main/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fern-project-main-service
spec:
  type: LoadBalancer
  selector:
    app: fern-project-main
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
