deployment/main/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fern-project-main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: my-go-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fern-project-main-service
                port:
                  name: http
